# Puffer

./: .gitignore  LICENSE.md  README.md  privacy.md  settings.gradle
Puffer/: build.gradle
Puffer/release/: app-release.aab
Puffer/src/main/: AndroidManifest.xml
Puffer/src/main/res/drawable/: border.xml  ic_analytics_black_18dp.xml  ic_delete_forever_24px.xml  ic_fact_check_black_18dp.xml  ic_mode_edit_24px.xml  ic_settings_applications_24px.xml
Puffer/src/main/res/layout/: activity_main.xml  analysis_view.xml  block_list_item.xml  block_list_view.xml  block_view.xml  live_view.xml  live_view_item.xml  settings_view.xml
Puffer/src/main/res/raw/: base.txt
Puffer/src/main/res/values/: strings.xml  themes.xml
Puffer/src/main/res/values-night/: themes.xml
app/release/: app-release.aab
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: border.xml  ic_analytics_black_18dp.xml  ic_fact_check_black_18dp.xml  ic_lock.xml  ic_lock_locked.xml  ic_lock_open.xml  ic_lock_unlocked.xml  ic_locked_foreground.xml  ic_unlocked_foreground.xml
gradle/wrapper/: gradle-wrapper.properties
native/: .clang-format  CMakeLists.txt  Makefile  a.out  format  testMode  upscript
native/dev/: CMakeLists.txt
native/lists/: base.txt
native/src/: android.cpp  block_list.cpp  block_list.h  checksum.cpp  checksum.h  core.h  dev.cpp  dev.h  general.h  log.h  main.cpp  network.h  packet.cpp  packet.h  quic.h  socket.h  tcp.h  tls.c  tls.cpp  tls.h  tun.cpp  tun.h  udp.h  util.h
store/: banner.xcf  logo.xcf
store/screenshots/: Puffer (2).mockup  website
(+38 files in other folders)
